--- a/public/index.html
+++ b/public/index.html
@@ -1,29 +1,77 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
+<head>
     <!-- Meta Information -->
     <title>Tweeter - Home Page</title>
-
     <!-- External CSS -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css" type="text/css" />
-
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Bungee&family=Source+Sans+Pro:wght@300;400;600&ital,wght@300,400,600&display=swap">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <!-- App CSS -->
     <link rel="stylesheet" href="/styles/layout.css" type="text/css" />
-
-    <!-- External JS -->
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
-
-    <!-- App JS -->
-    <script type="text/javascript" src="/scripts/client.js"></script>
-  </head>
-
-  <body>
+    <link rel="stylesheet" href="/styles/nav.css">
+    <link rel="stylesheet" href="/styles/header.css">
+    <link rel="stylesheet" href="/styles/new-tweet.css" type="text/css" />
+    <link rel="stylesheet" href="/styles/tweets.css" type="text/css" />
+</head>
+<body>
     <!-- Top nav bar (fixed) -->
     <nav>
-      <span>tweeter</span>
+        <span>tweeter</span>
+        <div class="new-tweet-link">
+            <span>Write a new tweet</span>
+            <i class="fas fa-angle-double-down"></i> <!-- Font Awesome icon -->
+        </div>
     </nav>
-
-    <!-- Page-specific (main) content here -->
-    <main class="container"></main>
-  </body>
+    <header>
+        <div class="avatar-container">
+            <img src="/images/profile-hex.png" alt="Profile Avatar"> 
+        </div>
+        <br>
+        <div class="name-container">
+            <h2>Eghosa Agbonkina</h2>
+        </div>
+    </header>
+    <main class="container">
+        <section class="new-tweet">
+            <h2>Compose Tweet</h2>
+            <form id="tweet-form">
+                <label for="tweet-text">What are you humming about?</label>
+                <textarea name="text" id="tweet-text"></textarea>
+                <div>
+                    <button type="submit" id="submit-tweet">Tweet</button>
+                    <output name="counter" class="counter" for="tweet-text">140</output>
+                </div>
+            </form>
+        </section>
+        <section id="tweets-container">
+            <!-- Example of a tweet -->
+            <article class="tweet">
+                <header>
+                    <img src="/images/profile-hex.png" alt="User's avatar">
+                    <h2>Rhoda Jacobs</h2>
+                    <span>@MrsJacobs</span>
+                </header>
+                <p>Hello world!</p>
+                <footer>
+                    <span>10 days ago</span>
+                    <div class="tweet-icons">
+                        <i class="fas fa-flag"></i>
+                        <i class="fas fa-retweet"></i>
+                        <i class="fas fa-heart"></i>
+                    </div>
+                </footer>
+            </article>
+            <!-- More tweets will be appended here by client.js -->
+        </section>
+    </main>
+    
+    <!-- Scripts -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/timeago.js/4.0.2/timeago.min.js"></script>
+    <script type="text/javascript" src="/scripts/client.js"></script>
+    <script type="text/javascript" src="/scripts/composer-char-counter.js"></script>
+    <script type="text/javascript" src="/scripts/tweets.js"></script>
+    
+</body>
 </html>
